--- a/.env
+++ b/.env
@@ -108,7 +108,7 @@ honeypot.container = '<div style="display:none">{template}</div>'
 # SECURITY
 #--------------------------------------------------------------------
 
-security.csrfProtection = 'cookie'
+security.csrfProtection = 'session'
 security.tokenRandomize = true
 security.tokenName = 'csrf_token_upes'
 security.headerName = 'X-CSRF-TOKEN'
