--- a/public/.htaccess
+++ b/public/.htaccess
@@ -15,7 +15,7 @@ Options -Indexes
 	# change the following line to match the subfolder you need.
 	# http://httpd.apache.org/docs/current/mod/mod_rewrite.html#rewritebase
     # importante configurar para reescribir la url
-    RewriteBase /solicitudesbackend/
+    RewriteBase / 
 
 	# Redirect Trailing Slashes...
 	RewriteCond %{REQUEST_FILENAME} !-d
